--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -747,6 +747,11 @@ img.resource-item--author-photo, .resource-item--author-photo {
         font-size: 14px;
       }
 
+      .resource-item--head-title {
+        display: flex;
+        padding: 0;
+      }
+
       .resource-item--tags {
         display: none;
       }
