--- a/app/components/custom/shared/resource_item/component.html.erb
+++ b/app/components/custom/shared/resource_item/component.html.erb
@@ -81,7 +81,7 @@
         </a>
 
         <div class="resource-item--description">
-          <%= truncate(@description, length: truncate_length) %>
+          <%== truncate(@description, length: truncate_length)&.html_safe %>
           <% if @id.present? && Rails.env.development? %>
             <%= @id %>
           <% end %>
