--- a/app/components/custom/proposals/proposal_list_item/component.html.erb
+++ b/app/components/custom/proposals/proposal_list_item/component.html.erb
@@ -3,6 +3,6 @@
    <%= link_to('Unterstützen', helpers.proposal_path(proposal), class: 'button -orange') %>
   <% end %>
   <% c.second_footer_item do  %>
-    <%= proposal.votes_for.size %> Unterstützer*innen
+    <%= t("proposals.proposal.supports", count: proposal.total_votes) %>
   <% end %>
 <% end %>
