--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -895,4 +895,9 @@ img.resource-item--author-photo, .resource-item--author-photo {
     background: #FFA42D;
     color: black;
   }
+
+  &.-purple {
+    background: #EAE4FB;
+    color: black;
+  }
 }
