--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -32,11 +32,23 @@
 
   <% if @proposals.any? %>
     <div class="d-flex u-flex-container">
-      <%= render Proposals::ProposalList::Component.new(proposals: @proposals, title: "Proposals", wide: false) %>
+      <%= render Shared::ResourcesList::Component.new(title: 'Proposals', wide: false) do |c| %>
+        <% c.body do %>
+          <% @proposals.each do |proposal| %>
+            <%= render Proposals::ListItem::Component.new(proposal: proposal, wide: false) %>
+          <% end %>
+        <% end %>
+      <% end %>
       <%= render 'sidebar'  %>
     </div>
     <div class="d-flex u-flex-container">
-      <%= render Proposals::ProposalList::Component.new(proposals: @proposals, title: "Proposals", wide: true) %>
+      <%= render Shared::ResourcesList::Component.new(title: 'Proposals', wide: true) do |c| %>
+        <% c.body do %>
+          <% @proposals.each do |proposal| %>
+            <%= render Proposals::ListItem::Component.new(proposal: proposal, wide: true) %>
+          <% end %>
+        <% end %>
+      <% end %>
       <%= render 'sidebar'  %>
     </div>
   <% end %>
@@ -57,6 +69,29 @@
         <% c.body do %>
           <% @debates.each do |debate| %>
             <%= render Debates::ListItem::Component.new(debate: debate, wide: true) %>
+          <% end %>
+        <% end %>
+      <% end %>
+      <%= render 'sidebar'  %>
+    </div>
+  <% end %>
+
+  <% if @polls.any? %>
+    <div class="d-flex u-flex-container">
+      <%= render Shared::ResourcesList::Component.new(title: 'Polls', wide: false) do |c| %>
+        <% c.body do %>
+          <% @polls.each do |poll| %>
+            <%= render Polls::ListItem::Component.new(poll: poll, wide: false) %>
+          <% end %>
+        <% end %>
+      <% end %>
+      <%= render 'sidebar'  %>
+    </div>
+    <div class="d-flex u-flex-container">
+      <%= render Shared::ResourcesList::Component.new(title: 'Poll', wide: true) do |c| %>
+        <% c.body do %>
+          <% @polls.each do |poll| %>
+            <%= render Polls::ListItem::Component.new(poll: poll, wide: false) %>
           <% end %>
         <% end %>
       <% end %>
