--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -516,6 +516,7 @@ p {
   justify-content: space-between;
   margin-bottom: 10px;
   padding: 0 25px;
+  height: 11px;
 
   .resource-item--head-title {
     display: none;
