--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -21,80 +21,44 @@
 
   <% if @active_projekts.any? %>
     <div class="d-flex u-flex-container">
-      <%= render Projekts::ProjektList::Component.new(projekts: @active_projekts, title: t("custom.welcome.active_projekt_cards.title"), wide: false) %>
+      <%= render Shared::ResourcesList::Component.new(resources: @active_projekts, title: t("custom.welcome.active_projekt_cards.title"), wide: false) %>
       <%= render 'sidebar'  %>
     </div>
     <div class="d-flex u-flex-container">
-      <%= render Projekts::ProjektList::Component.new(projekts: @active_projekts, title: t("custom.welcome.active_projekt_cards.title"), wide: true) %>
+      <%= render Shared::ResourcesList::Component.new(resources: @active_projekts, title: t("custom.welcome.active_projekt_cards.title"), wide: true) %>
       <%= render 'sidebar'  %>
     </div>
   <% end %>
 
   <% if @proposals.any? %>
     <div class="d-flex u-flex-container">
-      <%= render Shared::ResourcesList::Component.new(title: 'Proposals', wide: false) do |c| %>
-        <% c.body do %>
-          <% @proposals.each do |proposal| %>
-            <%= render Proposals::ListItem::Component.new(proposal: proposal, wide: false) %>
-          <% end %>
-        <% end %>
-      <% end %>
+      <%= render Shared::ResourcesList::Component.new(resources: @proposals, title: "Proposals", wide: false) %>
       <%= render 'sidebar'  %>
     </div>
     <div class="d-flex u-flex-container">
-      <%= render Shared::ResourcesList::Component.new(title: 'Proposals', wide: true) do |c| %>
-        <% c.body do %>
-          <% @proposals.each do |proposal| %>
-            <%= render Proposals::ListItem::Component.new(proposal: proposal, wide: true) %>
-          <% end %>
-        <% end %>
-      <% end %>
+      <%= render Shared::ResourcesList::Component.new(resources: @proposals, title: "Proposals", wide: true) %>
       <%= render 'sidebar'  %>
     </div>
   <% end %>
 
   <% if @debates.any? %>
     <div class="d-flex u-flex-container">
-      <%= render Shared::ResourcesList::Component.new(title: 'Debates', wide: false) do |c| %>
-        <% c.body do %>
-          <% @debates.each do |debate| %>
-            <%= render Debates::ListItem::Component.new(debate: debate, wide: false) %>
-          <% end %>
-        <% end %>
-      <% end %>
+      <%= render Shared::ResourcesList::Component.new(resources: @debates, title: "Debates", wide: false) %>
       <%= render 'sidebar'  %>
     </div>
     <div class="d-flex u-flex-container">
-      <%= render Shared::ResourcesList::Component.new(title: 'Debates', wide: true) do |c| %>
-        <% c.body do %>
-          <% @debates.each do |debate| %>
-            <%= render Debates::ListItem::Component.new(debate: debate, wide: true) %>
-          <% end %>
-        <% end %>
-      <% end %>
+      <%= render Shared::ResourcesList::Component.new(resources: @debates, title: "Debates", wide: true) %>
       <%= render 'sidebar'  %>
     </div>
   <% end %>
 
   <% if @polls.any? %>
     <div class="d-flex u-flex-container">
-      <%= render Shared::ResourcesList::Component.new(title: 'Polls', wide: false) do |c| %>
-        <% c.body do %>
-          <% @polls.each do |poll| %>
-            <%= render Polls::ListItem::Component.new(poll: poll, wide: false) %>
-          <% end %>
-        <% end %>
-      <% end %>
+      <%= render Shared::ResourcesList::Component.new(resources: @polls, title: "Debates", wide: false) %>
       <%= render 'sidebar'  %>
     </div>
     <div class="d-flex u-flex-container">
-      <%= render Shared::ResourcesList::Component.new(title: 'Polls', wide: true) do |c| %>
-        <% c.body do %>
-          <% @polls.each do |poll| %>
-            <%= render Polls::ListItem::Component.new(poll: poll, wide: false) %>
-          <% end %>
-        <% end %>
-      <% end %>
+      <%= render Shared::ResourcesList::Component.new(resources: @polls, title: "Debates", wide: true) %>
       <%= render 'sidebar'  %>
     </div>
   <% end %>
