--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -558,6 +558,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
   }
 
   .participation-not-allowed {
@@ -587,6 +588,19 @@ p {
 
   &:last-child {
     border-left: 1px solid #d9d9d9;
+  }
+
+  .deficiency-report-status {
+    font-size: 16px;
+    width: 100%;
+    padding-left: 25px;
+    display: flex;
+    align-items: center;
+
+    i {
+      margin-right: 10px;
+      font-size: 30px;
+    }
   }
 }
 
@@ -870,6 +884,19 @@ img.resource-item--author-photo, .resource-item--author-photo {
 
       &:last-child {
         display: flex;
+      }
+
+      .deficiency-report-status {
+        display: flex;
+        align-items: center;
+        padding-left: 0;
+        flex-direction: column;
+        justify-content: center;
+
+        i {
+          margin-right: 10px;
+          font-size: 30px;
+        }
       }
     }
 
