--- a/app/components/custom/debates/list_item.html.erb
+++ b/app/components/custom/debates/list_item.html.erb
@@ -1,4 +1,4 @@
-<%= render(Shared::ResourceItem::Component.new(component_attributes)) do |c| %>
+<%= render(Shared::ResourceItem.new(component_attributes)) do |c| %>
   <% c.first_footer_item do  %>
     <div id="<%= dom_id(@debate) %>_votes">
       <%= render Debates::VotesComponent.new(debate) %>
