--- a/app/components/custom/polls/list_item.html.erb
+++ b/app/components/custom/polls/list_item.html.erb
@@ -1,4 +1,4 @@
-<%= render(Shared::ResourceItem::Component.new(component_attributes)) do |c| %>
+<%= render(Shared::ResourceItem.new(component_attributes)) do |c| %>
   <% c.first_footer_item do  %>
    <%= link_to('Teilnehmen', helpers.poll_path(poll), class: 'button -purple') %>
   <% end %>
