--- a/app/components/custom/proposals/list_item.html.erb
+++ b/app/components/custom/proposals/list_item.html.erb
@@ -1,4 +1,4 @@
-<%= render(Shared::ResourceItem::Component.new(component_attributes)) do |c| %>
+<%= render(Shared::ResourceItem.new(component_attributes)) do |c| %>
   <% c.first_footer_item do  %>
    <%= link_to('Unterstützen', helpers.proposal_path(proposal), class: 'button -orange') %>
   <% end %>
