--- a/app/components/custom/deficiency_reports/list_item.html.erb
+++ b/app/components/custom/deficiency_reports/list_item.html.erb
@@ -1,13 +1,13 @@
 <%= render(Shared::ResourceItem.new(component_attributes)) do |c| %>
-  <% c.first_footer_item do  %>
-    <%= render "deficiency_reports/status", deficiency_report: deficiency_report %>
+  <% if deficiency_report.status.present? %>
+    <% c.first_footer_item do  %>
+      <%= render "deficiency_reports/status", deficiency_report: deficiency_report %>
+    <% end %>
   <% end %>
 
-  <% if deficiency_reports_feature?('allow_voting') %>
     <% c.second_footer_item do  %>
       <div id="<%= dom_id(deficiency_report) %>_votes">
         <%= render "deficiency_reports/votes", deficiency_report: deficiency_report %>
       </div>
     <% end %>
-  <% end %>
 <% end %>
