--- a/app/components/budgets/investments/votes_component.html.erb
+++ b/app/components/budgets/investments/votes_component.html.erb
@@ -1,8 +1,8 @@
 <div class="supports">
 
-  <span class="total-supports <%= "no-button" unless voting_allowed? || user_voted_for? %>">
-    <%= t("budgets.investments.investment.supports", count: investment.total_votes) %>
-  </span>
+  <!-- <span class="total-supports <%= "no-button" unless voting_allowed? || user_voted_for? %>"> -->
+  <!--   <%= t("budgets.investments.investment.supports", count: investment.total_votes) %> -->
+  <!-- </span> -->
 
   <div class="in-favor">
     <% if investment.should_show_votes? %>
