--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -549,7 +549,7 @@ p {
     margin-bottom: 0;
   }
 
-  .callout.warning, .callout.success, .callout.error {
+  .callout.warning, .callout.success, .callout.error, .callout.alert {
     width: 100%;
     position: absolute;
     top: 0;
