--- a/app/views/custom/budgets/investments/_investment_status_callout.html.erb
+++ b/app/views/custom/budgets/investments/_investment_status_callout.html.erb
@@ -1,4 +1,4 @@
-<% if investment.budget.phase.in?(['accepting', 'reviewing', 'valuating', 'reviewing_ballots']) %>
+<% if investment.budget.phase.in?(['accepting', 'reviewing', 'valuating', 'reviewing_ballots', 'publishing_prices']) %>
   <% callout_class = investment.budget.phase == 'accepting' ? 'success' : 'warning' %>
 
   <div class="callout <%= callout_class %>">
