--- a/app/components/custom/shared/resource_item.html.erb
+++ b/app/components/custom/shared/resource_item.html.erb
@@ -88,7 +88,7 @@
         </div>
 
         <% if additional_body.present? %>
-          <div class="resource-item--additional-body resource-item--additional-body--card">
+          <div class="resource-item--additional-body">
             <%= additional_body %>
           </div>
         <% end %>
@@ -127,7 +127,7 @@
 
         <% if additional_body.present? %>
           <div class="resource-item--footer-section resource-item--additional-body-in-footer">
-            <div class="resource-item--additional-body resource-item--additional-body--wide">
+            <div class="resource-item--additional-body">
               <%= additional_body %>
             </div>
           </div>
