--- a/app/components/custom/proposals/list_item.html.erb
+++ b/app/components/custom/proposals/list_item.html.erb
@@ -6,15 +6,17 @@
           <%= t("proposals.proposal.archived") %>
         </div>
       <% else %>
-        <div id="proposal_<%= @proposal.id %>_votes">
-          <%= render Proposals::NewVotesComponent.new(@proposal, vote_url: vote_proposal_path(proposal, value: "yes")) %>
+        <div id="proposal_<%= proposal.id %>_votes">
+          <%= render Proposals::NewVotesComponent.new(proposal, vote_url: vote_proposal_path(proposal, value: "yes")) %>
         </div>
       <% end %>
     <% end %>
   <% end %>
 
   <% c.second_footer_item do  %>
-    <%= t("proposals.proposal.supports", count: proposal.total_votes) %>
+    <div id="proposal_<%= proposal.id %>_votes_count">
+      <%= t("proposals.proposal.supports", count: proposal.total_votes) %>
+    </div>
   <% end %>
 <% end %>
 
