--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -474,7 +474,7 @@ p {
 .resource-item--description {
   font-size: 15px;
   margin-top: 5px;
-  margin-bottom: 12px;
+  margin-bottom: 0;
 }
 
 .resources-list--inner {
@@ -533,7 +533,11 @@ p {
 .resource-item--body {
   padding: 0 25px 15px;
   // min-height: 115px;
-  min-height: 152px;
+  min-height: 142px;
+
+  .resource-item--additional-body {
+    margin-top: 12px;
+  }
 }
 
 .resource-item.projekt-list-item {
