--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -432,7 +432,7 @@ p {
   height: 180px;
   width: 100%;
   background: #dcdcdc;
-  margin-bottom: 22px;
+  margin-bottom: 17px;
   display: flex;
   justify-content: center;
   position: relative;
@@ -475,6 +475,7 @@ p {
   font-size: 15px;
   margin-top: 5px;
   margin-bottom: 0;
+  line-height: 1.3;
 }
 
 .resources-list--inner {
@@ -533,7 +534,8 @@ p {
 .resource-item--body {
   padding: 0 25px 15px;
   // min-height: 115px;
-  min-height: 142px;
+  // min-height: 142px;
+  min-height: 128px;
 
   .resource-item--additional-body {
     margin-top: 12px;
@@ -542,7 +544,7 @@ p {
 
 .resource-item.projekt-list-item {
   .resource-item--body {
-    min-height: 215px;
+    min-height: 168px;
   }
 }
 
@@ -629,6 +631,7 @@ p {
     display: flex;
     align-items: center;
     font-weight: 500;
+    justify-content: center;
 
     i {
       margin-right: 10px;
@@ -739,6 +742,7 @@ img.resource-item--author-photo, .resource-item--author-photo {
   background: #003A71;
   display: flex;
   align-items: center;
+  color: white;
 
   a {
     color: white;
