--- a/app/components/custom/shared/resource_item.html.erb
+++ b/app/components/custom/shared/resource_item.html.erb
@@ -48,7 +48,7 @@
       <div class="resource-item--image-placeholder">
         <i class="resource-item--image-placeholder-icon fa <%= @image_placeholder_icon_class %>"></i>
         <div class="resource-item--image-placeholder-text">
-          <%= @resource_name %>
+          <%= t("custom.resource_names.#{@resource_name}") %>
         </div>
       </div>
     <% end %>
