--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -668,7 +668,7 @@ img.resource-item--author-photo, .resource-item--author-photo {
   }
 
   i {
-    margin-right: 5px;
+    width: 24px;
   }
 }
 
