--- a/app/assets/stylesheets/custom_design_v2/base.scss
+++ b/app/assets/stylesheets/custom_design_v2/base.scss
@@ -544,7 +544,8 @@ p {
 
 .resource-item.projekt-list-item {
   .resource-item--body {
-    min-height: 168px;
+    // min-height: 168px;
+    min-height: 203px;
   }
 }
 
