--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,7 +57,7 @@
 
 @import "custom";
 @import "custom/**/*";
-@import "custom_design_v2/base";
+@import "custom_design_v2/**/*";
 
 
 // ::-moz-selection { /* Code for Firefox */
