--- a/app/components/custom/shared/resources_list.html.erb
+++ b/app/components/custom/shared/resources_list.html.erb
@@ -14,7 +14,7 @@
       </div>
 
     </div>
-    <div class="resources-list--switch-view-button">
+    <div class="resources-list--switch-view-button js-resource-list-switch-view-button">
       <i class="fa fa-bars"></i>
     </div>
   </div>
