--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -1,5 +1,5 @@
 .resources-list {
-  &.wide {
+  &.-wide {
     .resources-list--switch-view-button {
       background: #dedede;
     }
@@ -47,4 +47,5 @@
   align-items: center;
   justify-content: center;
   color: #707070;
+  transition: 200ms background ease;
 }
