--- a/app/components/custom/shared/resources_list.html.erb
+++ b/app/components/custom/shared/resources_list.html.erb
@@ -15,7 +15,7 @@
 
     </div>
     <div class="resources-list--switch-view-button js-resource-list-switch-view-button">
-      <i class="fa fa-bars"></i>
+      <i class="fa <%= switch_view_mode_icon %>"></i>
     </div>
   </div>
   <div class="resources-list--inner">
