--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -1,8 +1,8 @@
 .resources-list {
   &.-wide {
-    // .resources-list--switch-view-button {
-    //   background: #dedede;
-    // }
+    .resources-list--switch-view-button {
+      display: none;
+    }
   }
 }
 
