--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -1,5 +1,5 @@
-.resources-list {
-  &.-wide {
+@media (min-width: 970px) {
+  .resources-list {
     .resources-list--switch-view-button {
       display: none;
     }
