--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -1,4 +1,4 @@
-@media (min-width: 970px) {
+@media (max-width: 970px) {
   .resources-list {
     .resources-list--switch-view-button {
       display: none;
@@ -48,4 +48,124 @@
   justify-content: center;
   color: #707070;
   transition: 200ms background ease;
+}
+
+
+
+
+.dropdown-container {
+  margin: 0 auto;
+}
+
+/* Dropdown menu css */
+.dropdown-container {
+  position: relative;
+
+  .dropdown-toggle {
+    font-size: 16px;
+    padding-right: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    position: relative;
+    transition: all ease-in-out 0.3s;
+    user-select: none;
+
+    label {
+      cursor: pointer;
+      width: 100%;
+    }
+
+    &:hover,
+    &:active,
+    &:focus {
+    }
+  }
+
+  .dropdown-menu {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px -2px rgba(0, 0, 0, 0.5);
+    margin-top: 17px;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    display: none;
+    background-color: #ffffff;
+    z-index: 10;
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      overflow: hidden;
+      border-radius: 10px;
+      z-index: 10;
+      user-select: none;
+    }
+
+    a {
+      text-decoration: none;
+      display: block;
+      color: #000000;
+      font-size: 15px;
+      padding: 16px 20px;
+      font-weight: 600;
+      box-shadow: 0px 0px 4px -2px rgba(0, 0, 0, 0.5);
+      transition: all ease-in-out 0.3s;
+
+      &:hover,
+      &:active,
+      &:focus {
+        background-color: #0979ce;
+        color: #ffffff;
+      }
+    }
+  }
+}
+
+.dropdown-menu,
+.dropdown-toggle {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+    border: 5px solid;
+    border-top-color: rgba(0, 0, 0, 0);
+    border-left-color: rgba(0, 0, 0, 0);
+    margin-top: -2.5px;
+    background-color: rgba(0, 0, 0, 0);
+    transition: all ease-in-out 0.2s;
+  }
+}
+
+.dropdown-menu {
+  z-index: 10;
+  position: relative;
+
+  &::before {
+    z-index: -1;
+    transform: rotate(-135deg);
+    top: -4px;
+    border-color: #ffffff;
+    box-shadow: 1px 1px 4px -2px rgba(0, 0, 0, 0.4);
+  }
+}
+
+.dropdown-open {
+  .dropdown-menu.dropdown-active {
+    display: block;
+  }
+}
+
+.dropdown-container.dropdown-open {
+  .dropdown-toggle {
+
+    &:before {
+      transform: rotate(-135deg);
+    }
+  }
 }
