--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -30,6 +30,10 @@
 .resources-list--sort {
   display: flex;
   width: 220px;
+
+  // .dropdown-container {
+  //   width: 100%;
+  // }
 }
 
 .resources-list--sort-label {
@@ -82,12 +86,13 @@
   }
 
   .dropdown-menu {
-    width: 100%;
+    // width: 100%;
+    width: max-content;
     border-radius: 10px;
     box-shadow: 0px 0px 4px -2px rgba(0, 0, 0, 0.5);
-    margin-top: 17px;
+    margin-top: 8px;
     position: absolute;
-    left: 0;
+    right: 0;
     top: 100%;
     display: none;
     background-color: #ffffff;
@@ -95,7 +100,7 @@
 
     ul {
       list-style: none;
-      padding: 0;
+      padding: 10px;
       margin: 0;
       overflow: hidden;
       border-radius: 10px;
@@ -145,9 +150,11 @@
 .dropdown-menu {
   z-index: 10;
   position: relative;
+  width: 107%;
 
   &::before {
     z-index: -1;
+    right: -3px;
     transform: rotate(-135deg);
     top: -4px;
     border-color: #ffffff;
