--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -21,15 +21,16 @@
 
 .resources-list--line-divider {
   height: 1px;
-  width: 100%;
+  // width: 100%;
+  flex-grow: 1;
   background: #c7c7c7;
   margin-right: 17px;
-  max-width: 640px;
 }
 
 .resources-list--sort {
   display: flex;
-  width: 220px;
+  white-space: nowrap;
+  // width: 220px;
 
   // .dropdown-container {
   //   width: 100%;
@@ -43,6 +44,7 @@
 .resources-list--switch-view-button {
   width: 30px;
   height: 30px;
+  margin-left: 20px;
   background: white;
   border: 1px solid #D9D9D9;
   border-radius: 10px;
